generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "mongodb"
  url      = env("DATABASE_URL")
}

model Sketchbook {
  id               String  @id @default(auto()) @map("_id") @db.ObjectId
  name             String
  shortDescription String?
  description      String?
  unlisted         Boolean @default(false)

  pageRootUrl String
  pages       Page[]
  days        Day[]
}

model Page {
  id       String @id @default(auto()) @map("_id") @db.ObjectId
  index    Int
  name     String
  fileName String

  sketchbook   Sketchbook @relation(fields: [sketchbookId], references: [id], onDelete: Cascade)
  sketchbookId String     @db.ObjectId
}

model Day {
  id    String  @id @default(auto()) @map("_id") @db.ObjectId
  day   Int
  pages Int[]
  about String?

  sketchbook   Sketchbook @relation(fields: [sketchbookId], references: [id], onDelete: Cascade)
  sketchbookId String     @db.ObjectId
}
