//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Sketchbook {
  id String [pk]
  name String [not null]
  shortDescription String
  description String
  unlisted Boolean [not null, default: false]
  pageRootUrl String [not null]
  pages Page [not null]
  days Day [not null]
}

Table Page {
  id String [pk]
  index Int [not null]
  name String [not null]
  fileName String [not null]
  sketchbook Sketchbook [not null]
  sketchbookId String [not null]
}

Table Day {
  id String [pk]
  day Int [not null]
  pages Int[] [not null]
  about String
  sketchbook Sketchbook [not null]
  sketchbookId String [not null]
}

Ref: Page.sketchbookId > Sketchbook.id [delete: Cascade]

Ref: Day.sketchbookId > Sketchbook.id [delete: Cascade]